// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`attribute\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group by pattern only
    </div>
    <div
      class="text-body-2"
    >
      All alarms that have the attribute(s) defined by filter patterns are grouped
    </div>
  </div>
  <!---->
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
    somerequired="true"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`complex\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group with trigger threshold or rate
    </div>
    <div
      class="text-body-2"
    >
      All alarms that have the attribute(s) defined by filter patterns, time interval, and a trigger threshold or rate are grouped
    </div>
  </div>
  <c-form-block>
    <meta-alarm-rule-threshold-field-stub
      value="[object Object]"
    />
    <meta-alarm-rule-time-based-field-stub />
    <!---->
    <!---->
    <!---->
  </c-form-block>
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
    withtotalentity="true"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`corel\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group under custom defined parent
    </div>
    <div
      class="text-body-2"
    >
      All alarms that have the attribute(s) defined by filter patterns, time interval, threshold count, and the correlation identifiers are grouped
    </div>
  </div>
  <c-form-block>
    <!---->
    <!---->
    <!---->
    <!---->
    <meta-alarm-rule-corel-form-stub
      config="[object Object]"
      templatevars="[object Object]"
    />
  </c-form-block>
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`manualgroup\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      metaAlarmRule.types.manualgroup.text
    </div>
    <div
      class="text-body-2"
    >
      metaAlarmRule.types.manualgroup.helpText
    </div>
  </div>
  <!---->
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`relation\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group under parent component
    </div>
    <div
      class="text-body-2"
    >
      Define the patterns that should have all alarms raised on its dependencies grouped
    </div>
  </div>
  <!---->
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`timebased\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group by creation date interval
    </div>
    <div
      class="text-body-2"
    >
      All alarms that match the patterns and raised during a defined time interval are grouped
    </div>
  </div>
  <c-form-block>
    <!---->
    <meta-alarm-rule-time-based-field-stub />
    <!---->
    <!---->
    <!---->
  </c-form-block>
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with \`valuegroup\` type 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group by group of values
    </div>
    <div
      class="text-body-2"
    >
      All alarms that have the attribute(s) defined by filter patterns, time interval, trigger threshold or rate, and the value path are grouped
    </div>
  </div>
  <c-form-block>
    <meta-alarm-rule-threshold-field-stub
      value="[object Object]"
    />
    <meta-alarm-rule-time-based-field-stub />
    <c-form-block-row
      label="metaAlarmRule.childInactiveDelay"
    >
      <div
        class="layout gap-3 column"
      >
        <div
          class="layout gap-2"
        >
          <c-enabled-field
            label="metaAlarmRule.childInactiveDelay"
          />
          <c-help-icon
            icon="help"
            max-width="300"
            text="metaAlarmRule.childInactiveDelayHelpText"
            top=""
          />
        </div>
        <!---->
      </div>
    </c-form-block-row>
    <meta-alarm-rule-value-paths-form-stub
      form="[object Object]"
      name="value_paths"
    />
    <!---->
  </c-form-block>
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
    withtotalentity="true"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with custom props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      Group with trigger threshold or rate
    </div>
    <div
      class="text-body-2"
    >
      All alarms that have the attribute(s) defined by filter patterns, time interval, and a trigger threshold or rate are grouped
    </div>
  </div>
  <c-form-block>
    <meta-alarm-rule-threshold-field-stub
      value="[object Object]"
    />
    <meta-alarm-rule-time-based-field-stub />
    <!---->
    <!---->
    <!---->
  </c-form-block>
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
    withtotalentity="true"
  />
</div>
`;

exports[`meta-alarm-rule-parameters-form Renders \`meta-alarm-rule-parameters-form\` with default props 1`] = `
<div
  class="layout gap-3 column"
>
  <div
    class="mb-2"
  >
    <div
      class="text-subtitle-2 mb-2"
    >
      metaAlarmRule.types.undefined.text
    </div>
    <div
      class="text-body-2"
    >
      metaAlarmRule.types.undefined.helpText
    </div>
  </div>
  <!---->
  <meta-alarm-rule-patterns-form-stub
    form="[object Object]"
  />
</div>
`;
